refactor: remove unused imports, reduce duplicat codes added essential comments for b+tree removal